corrected after integrating copilot to explain inline use of hash maps and the assumptions made by accidentally inferring two different serializable objects